# TileFusion

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  _config.yml  examples.md  index.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_build.sh  setup.py  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: clang-format.yml  docs.yml  lint.yml  ruff.yml  sync-docs.yml
_includes/: custom-head.html  footer.html
_layouts/: mathjax.html
assets/css/: custom.css
benchmarks/: index.md
benchmarks/cpp/copy/: CMakeLists.txt  README.md  cutlass_copy.cuh  main.cu
benchmarks/cpp/flashattention/: CMakeCache.txt  CMakeLists.txt  Makefile  convert.cuh  copy.cuh  cutlass_fa.cuh  main.cu  reduce.cuh  util.cuh  util.hpp
benchmarks/cpp/fused_two_gemms/: CMakeLists.txt  Makefile  bench.cu  cutlass_fused_two_gemms.cuh  tilefusion_fused_two_gemms.cuh  util.cuh
benchmarks/cpp/g2s_copy/: CMakeLists.txt  Makefile  README.md  cutlass_copy.cuh  main.cu  tilefusion_copy.cuh
benchmarks/cpp/gemm/: CMakeLists.txt  README.md  bench.cu  cutlass_gemm.cuh  tilefusion_gemm.cuh  util.cuh
benchmarks/cpp/gemm/figures/: bench_NVIDIA_A100_80GB_PCIe_gemm.tsv
benchmarks/gemm/cuBLAS/: test.py
benchmarks/gemm/cuBLAS/src/: CMakeLists.txt  bind.cu  cublas_gemm.cuh
benchmarks/gemm/cutlass/: compile.py  cutlass_gemm.cuh  entry.py  gemm.py  test.py
benchmarks/gemm/tilefusion/: compile.py  entry.py  gemm.hpp  gemm.py  test.py
benchmarks/python/: bench_gemm.py  bench_utils.py
benchmarks/utils/cpp/: cuda_utils.cuh
benchmarks/utils/cpp/cutlass/: convert.cuh  copy.cuh  traits_base.cuh
benchmarks/utils/python/: __init__.py
cmake/: dependencies.cmake  generic.cmake
cmake/public/: glog.cmake
docs/: about.md  index.md  installation.md  tiles_in_shared_memory.md
examples/: README.md  index.md  jit_example.py
examples/01_gemm/: CMakeLists.txt
examples/01_gemm/01_gemm_global_reg/: gemm.hpp
examples/02_fused_two_gemms/: CMakeLists.txt  Makefile  fused_two_consecutive_gemms.cu  fused_two_gemms.cu  util.hpp
examples/03_flash_attention/: CMakeLists.txt  flash_attn.cu  flash_attn.hpp  flash_attn_cpu.hpp
examples/101_gemm/: util.hpp
examples/101_gemm/01_gemm_global_reg/: gemm.hpp  main.cu
examples/101_gemm/02_gemm_all_mem/: gemm.hpp  main.cu
examples/cpp/01_gemm/: CMakeLists.txt  util.hpp
examples/cpp/01_gemm/01_gemm_global_reg/: gemm.hpp
examples/cpp/01_gemm/02_gemm_all_mem/: gemm.hpp  main.cu
examples/cpp/02_fused_two_gemms/: CMakeLists.txt  b2b_gemm.cu  b2b_gemm.hpp  util.hpp
examples/cpp/03_flash_attention/: CMakeLists.txt  flash_attn.cu  flash_attn.hpp  util.hpp
examples/cpp/04_flash_decoding/: CMakeLists.txt  flash_decoding.cu  flash_decoding.hpp  host_flash_decoding.hpp  util.hpp
examples/python/gemm/: README.md  compile.py  entry.py  gemm.py  main.py
examples/python/gemm/csrc/: kernel.h
include/: config.hpp  cuda_info.hpp  cuda_utils.hpp  errors.hpp  kernel_defs.hpp  kernel_registry.hpp  threadblock_swizzle.hpp
include/cell/: mask.hpp  mod.hpp  pipeline.hpp  sync.hpp  warp.hpp
include/cell/compute/: broadcast.hpp  elementwise.hpp  gemm.hpp  map.hpp  math_functor.hpp  mod.hpp  reduce.hpp  softmax.hpp
include/cell/copy/: constants.hpp  copy_atom.hpp  global_to_register.hpp  global_to_register_vec.hpp  global_to_shared.hpp  global_to_shared_2.hpp  global_to_shared_v2.hpp  mod.hpp  register.hpp  shared_to_register.hpp  sync.hpp  vectorize.hpp  warp.hpp
include/cell/traits/: base.hpp
include/jit/: common.hpp  compiler.hpp  config.hpp  mod.hpp
include/kernels/: common.hpp  dispatch_macros.hpp  flash_attention_device.cuh  flash_attn.hpp  fused_two_gemms.hpp  fused_two_gemms_device.cuh  gemm_device.cuh  jit_example.hpp  kernel_list.hpp  kernel_registry.hpp  mod.hpp  ops.hpp  scatter_nd.hpp
include/traits/: base.hpp
include/types/: base.hpp  base_tile.hpp  global.hpp  global_tile_iterator.hpp  layout.hpp  mod.hpp  packing.hpp  register.hpp  shared.hpp  shared_tile_iterator.hpp  swizzle.hpp  thread_block.hpp  thread_block_swizzle.hpp  tile_iterator.hpp  tile_shape.hpp
include/util/: cuda_info.hpp  cuda_timer.hpp  debug.hpp  fp8_utils.hpp  math_utils.hpp  print.hpp
python/: __init__.py  __version__.py
python/ops/: __init__.py  flash_attention.py  fused_two_gemms.py  gemm.py  jit_add.py  scatter_nd.py
pytilefusion/: __init__.py  __version__.py
scripts/: clang_format.hook
scripts/unittests/: python.sh  run_all_cpp_tests.sh
src/: CMakeLists.txt  cuda_info.cc  cuda_utils.cc  torch_bind.cc
src/jit/: compiler.cc
src/kernels/: flash_attn.cu  fused_two_gemms.cu  gemm.cu  jit_example.cc  scatter_nd.cc  scatter_nd.cu
tests/cpp/: CMakeLists.txt  test_thread_block_swizzle.cu  test_unit.cc
tests/cpp/cell/: test_atomic_warp_tile_shape.cu  test_broadcast.cu  test_flash_attn.cu  test_g2r_copy.cu  test_g2s_copy_2.cu  test_g2s_load.cu  test_g2s_load_v2.cu  test_gemm.cu  test_global_tile_iterator.cu  test_layout.cu  test_reduce.cu  test_s2r_copy.cu  test_shared_tile_iterator.cu  test_single_wmma.cu  test_softmax.cu  test_swizzled_copy.cu  test_tile_iterator.cu
tests/cpp/common/: test_utils.cc  test_utils.hpp
tests/cpp/jit/: test_jit.cc
tests/cpp/types/: test_fp8.cu  test_gtile_iterator.cu  test_layout.cu  test_shared_tile_iterator.cu  test_stile_iterator.cu  test_swizzle.cu  test_thread_block_swizzle.cu  test_tiled_matrix_layout.cu  test_warp_base_tile_shape.cu
tests/python/: context.py  test_flash_attn.py  test_fused_two_gemms.py  test_gemm.py  test_scatter_nd.py
