[project]
name = "tilefusion"
version = "0.0.0"
authors = [
    {name="Ying Cao", email="lcy.seso@gmail.com"},
    {name="ChengXiang Qi", email="KuangjuX@outlook.com"},
]

description = "TileFusion: Simplifying Kernel Fusion with Tile Processing"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
# NOTE: setuptools's `install_requires` can overwritten in
 # `pyproject.toml`'s `dependencies` field.
 # Make sure to keep this field in sync with what is in `requirements.txt`.
dependencies = [
    "torch",
]

[project.urls]
Homepage = "https://github.com/microsoft/TileFusion"
Issues = "https://github.com/microsoft/TileFusion/issues"

[build-system]
requires = [
    "cmake",
    "packaging",
    "setuptools>=49.4.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 80
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
include = ["*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "G",
]
ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.yapf]
column_limit = 80
indent_width = 4
based_on_style = "google"
split_before_logical_operator = false
dedent_closing_brackets = true
coalesce_brackets = true

[tool.codespell]
ignore-words-list = "ist"

[tool.isort]
use_parentheses = true
skip_gitignore = true
line_length = 80
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
ensure_newline_before_comments = true
